Fixed gap case

--- a/styles/blocks/portfolio.css
+++ b/styles/blocks/portfolio.css
@@ -10,6 +10,7 @@
 .case {
   margin-bottom: 40px;
   text-decoration: none;
+  display: block;
 }
 
 .case:last-child {
